[package]
name = "pgnice"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
nix = "0.26.2"
pgrx = "=0.8.1"
serde = "1.0.160"

[dev-dependencies]
pgrx-tests = "=0.8.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
